test/pending/neg/t0653.scala
class InL[A, B]
class Fix[Op[A]](x : Op[Fix[Op]])

class FixTest {
   val zero = new Fix(new InL)
}
